--- a/CocoaHeadsNL/itemNotification/Base.lproj/MainInterface.storyboard
+++ b/CocoaHeadsNL/itemNotification/Base.lproj/MainInterface.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="M4Y-Lb-cyx">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="M4Y-Lb-cyx">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -17,15 +17,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="320"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7th-bu-HxM">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="320"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7th-bu-HxM">
+                                <rect key="frame" x="16" y="20" width="288" height="280"/>
                             </imageView>
                         </subviews>
                         <constraints>
-                            <constraint firstItem="7th-bu-HxM" firstAttribute="leading" secondItem="2BE-c3-nQJ" secondAttribute="leading" id="Ci1-zT-48e"/>
-                            <constraint firstItem="7th-bu-HxM" firstAttribute="top" secondItem="2BE-c3-nQJ" secondAttribute="top" id="IvW-UD-hPC"/>
-                            <constraint firstItem="2BE-c3-nQJ" firstAttribute="trailing" secondItem="7th-bu-HxM" secondAttribute="trailing" id="MeJ-Aw-6Pc"/>
-                            <constraint firstItem="2BE-c3-nQJ" firstAttribute="bottom" secondItem="7th-bu-HxM" secondAttribute="bottom" id="SnZ-69-l7A"/>
+                            <constraint firstItem="7th-bu-HxM" firstAttribute="leading" secondItem="2BE-c3-nQJ" secondAttribute="leading" constant="16" id="Ci1-zT-48e"/>
+                            <constraint firstItem="7th-bu-HxM" firstAttribute="top" secondItem="2BE-c3-nQJ" secondAttribute="top" constant="20" id="IvW-UD-hPC"/>
+                            <constraint firstItem="2BE-c3-nQJ" firstAttribute="trailing" secondItem="7th-bu-HxM" secondAttribute="trailing" constant="16" id="MeJ-Aw-6Pc"/>
+                            <constraint firstItem="2BE-c3-nQJ" firstAttribute="bottom" secondItem="7th-bu-HxM" secondAttribute="bottom" constant="20" id="SnZ-69-l7A"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="2BE-c3-nQJ"/>
                     </view>
